--- a/Draw/ZhaJinHua/View/MoneyTreeView.xib
+++ b/Draw/ZhaJinHua/View/MoneyTreeView.xib
@@ -40,15 +40,14 @@
 					<object class="IBUIButton" id="136555037">
 						<reference key="NSNextResponder" ref="840940229"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{9, 0}, {44, 52}}</string>
+						<string key="NSFrame">{{9, 5}, {44, 52}}</string>
 						<reference key="NSSuperview" ref="840940229"/>
-						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
-						<object class="NSColor" key="IBUIHighlightedTitleColor" id="645716521">
+						<object class="NSColor" key="IBUIHighlightedTitleColor" id="587174301">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
 						</object>
@@ -79,7 +78,6 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrameSize">{47, 22}</string>
 								<reference key="NSSuperview" ref="657232119"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="46524347"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -94,7 +92,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrameSize">{47, 22}</string>
 								<reference key="NSSuperview" ref="657232119"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="136555037"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -103,7 +100,7 @@
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<string key="IBUIText">Label</string>
-								<reference key="IBUITextColor" ref="645716521"/>
+								<reference key="IBUITextColor" ref="587174301"/>
 								<object class="NSColor" key="IBUIHighlightedColor">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MC4xOTYwNzg0MzE0IDAuMzA5ODAzOTIxNiAwLjUyMTU2ODYyNzUAA</bytes>
@@ -125,9 +122,8 @@
 								<double key="preferredMaxLayoutWidth">47</double>
 							</object>
 						</array>
-						<string key="NSFrame">{{8, 0}, {47, 22}}</string>
+						<string key="NSFrame">{{8, -2}, {47, 22}}</string>
 						<reference key="NSSuperview" ref="840940229"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="712273025"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="247927424">
@@ -137,9 +133,8 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{62, 52}</string>
+				<string key="NSFrameSize">{62, 57}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="657232119"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="247927424"/>
@@ -257,50 +252,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">21</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">MoneyTree</string>
-					<string key="superclassName">UIButton</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/MoneyTree.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">MoneyTreeView</string>
-					<string key="superclassName">UIView</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="moneyTree">MoneyTree</string>
-						<string key="popMessageBackgroundImageView">UIImageView</string>
-						<string key="popMessageBody">UIView</string>
-						<string key="popMessageLabel">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="moneyTree">
-							<string key="name">moneyTree</string>
-							<string key="candidateClassName">MoneyTree</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="popMessageBackgroundImageView">
-							<string key="name">popMessageBackgroundImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="popMessageBody">
-							<string key="name">popMessageBody</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="popMessageLabel">
-							<string key="name">popMessageLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/MoneyTreeView.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
