--- a/Draw/ZhaJinHua/View/MoneyTreeView~ipad.xib
+++ b/Draw/ZhaJinHua/View/MoneyTreeView~ipad.xib
@@ -33,21 +33,22 @@
 				<string key="IBProxiedObjectIdentifier">IBFirstResponder</string>
 				<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 			</object>
-			<object class="IBUIView" id="6569895">
+			<object class="IBUIView" id="785655231">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIButton" id="969646497">
-						<reference key="NSNextResponder" ref="6569895"/>
+					<object class="IBUIButton" id="956151190">
+						<reference key="NSNextResponder" ref="785655231"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{18, 12}, {88, 104}}</string>
-						<reference key="NSSuperview" ref="6569895"/>
+						<string key="NSFrame">{{18, 10}, {88, 104}}</string>
+						<reference key="NSSuperview" ref="785655231"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
-						<object class="NSColor" key="IBUIHighlightedTitleColor" id="930794174">
+						<object class="NSColor" key="IBUIHighlightedTitleColor" id="802250150">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
 						</object>
@@ -69,16 +70,17 @@
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUIView" id="599738123">
-						<reference key="NSNextResponder" ref="6569895"/>
+					<object class="IBUIView" id="611664564">
+						<reference key="NSNextResponder" ref="785655231"/>
 						<int key="NSvFlags">319</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUIImageView" id="1063540864">
-								<reference key="NSNextResponder" ref="599738123"/>
+							<object class="IBUIImageView" id="365954049">
+								<reference key="NSNextResponder" ref="611664564"/>
 								<int key="NSvFlags">274</int>
 								<string key="NSFrameSize">{94, 44}</string>
-								<reference key="NSSuperview" ref="599738123"/>
-								<reference key="NSNextKeyView" ref="219515948"/>
+								<reference key="NSSuperview" ref="611664564"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="790451316"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -87,12 +89,13 @@
 									<string key="NSResourceName">zjh_money_tree_popMessage_background@2x.png</string>
 								</object>
 							</object>
-							<object class="IBUILabel" id="219515948">
-								<reference key="NSNextResponder" ref="599738123"/>
+							<object class="IBUILabel" id="790451316">
+								<reference key="NSNextResponder" ref="611664564"/>
 								<int key="NSvFlags">319</int>
 								<string key="NSFrameSize">{94, 44}</string>
-								<reference key="NSSuperview" ref="599738123"/>
-								<reference key="NSNextKeyView" ref="969646497"/>
+								<reference key="NSSuperview" ref="611664564"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="956151190"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -100,7 +103,7 @@
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 								<string key="IBUIText">Label</string>
-								<reference key="IBUITextColor" ref="930794174"/>
+								<reference key="IBUITextColor" ref="802250150"/>
 								<object class="NSColor" key="IBUIHighlightedColor">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MC4xOTYwNzg0MzE0IDAuMzA5ODAzOTIxNiAwLjUyMTU2ODYyNzUAA</bytes>
@@ -122,22 +125,24 @@
 								<double key="preferredMaxLayoutWidth">94</double>
 							</object>
 						</array>
-						<string key="NSFrame">{{15, 0}, {94, 44}}</string>
-						<reference key="NSSuperview" ref="6569895"/>
-						<reference key="NSNextKeyView" ref="1063540864"/>
+						<string key="NSFrame">{{15, -4}, {94, 44}}</string>
+						<reference key="NSSuperview" ref="785655231"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="365954049"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<object class="NSColor" key="IBUIBackgroundColor" id="702820375">
+						<object class="NSColor" key="IBUIBackgroundColor" id="728853686">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MCAwAA</bytes>
 						</object>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{124, 116}</string>
+				<string key="NSFrameSize">{124, 114}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSNextKeyView" ref="599738123"/>
+				<reference key="NSWindow"/>
+				<reference key="NSNextKeyView" ref="611664564"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
-				<reference key="IBUIBackgroundColor" ref="702820375"/>
+				<reference key="IBUIBackgroundColor" ref="728853686"/>
 				<object class="IBUISimulatedSizeMetrics" key="IBUISimulatedDestinationMetrics">
 					<string key="IBUISimulatedSizeMetricsClass">IBUISimulatedFreeformSizeMetricsSentinel</string>
 					<string key="IBUIDisplayName">Freeform</string>
@@ -150,32 +155,32 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">moneyTree</string>
-						<reference key="source" ref="6569895"/>
-						<reference key="destination" ref="969646497"/>
+						<reference key="source" ref="785655231"/>
+						<reference key="destination" ref="956151190"/>
 					</object>
 					<int key="connectionID">17</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">popMessageBody</string>
-						<reference key="source" ref="6569895"/>
-						<reference key="destination" ref="599738123"/>
+						<reference key="source" ref="785655231"/>
+						<reference key="destination" ref="611664564"/>
 					</object>
 					<int key="connectionID">18</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">popMessageLabel</string>
-						<reference key="source" ref="6569895"/>
-						<reference key="destination" ref="219515948"/>
+						<reference key="source" ref="785655231"/>
+						<reference key="destination" ref="790451316"/>
 					</object>
 					<int key="connectionID">19</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">popMessageBackgroundImageView</string>
-						<reference key="source" ref="6569895"/>
-						<reference key="destination" ref="1063540864"/>
+						<reference key="source" ref="785655231"/>
+						<reference key="destination" ref="365954049"/>
 					</object>
 					<int key="connectionID">20</int>
 				</object>
@@ -201,36 +206,36 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">12</int>
-						<reference key="object" ref="6569895"/>
+						<reference key="object" ref="785655231"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="969646497"/>
-							<reference ref="599738123"/>
+							<reference ref="956151190"/>
+							<reference ref="611664564"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">13</int>
-						<reference key="object" ref="599738123"/>
+						<reference key="object" ref="611664564"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="1063540864"/>
-							<reference ref="219515948"/>
+							<reference ref="365954049"/>
+							<reference ref="790451316"/>
 						</array>
-						<reference key="parent" ref="6569895"/>
+						<reference key="parent" ref="785655231"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">14</int>
-						<reference key="object" ref="969646497"/>
-						<reference key="parent" ref="6569895"/>
+						<reference key="object" ref="956151190"/>
+						<reference key="parent" ref="785655231"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">15</int>
-						<reference key="object" ref="1063540864"/>
-						<reference key="parent" ref="599738123"/>
+						<reference key="object" ref="365954049"/>
+						<reference key="parent" ref="611664564"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">16</int>
-						<reference key="object" ref="219515948"/>
-						<reference key="parent" ref="599738123"/>
+						<reference key="object" ref="790451316"/>
+						<reference key="parent" ref="611664564"/>
 					</object>
 				</array>
 			</object>
@@ -252,7 +257,50 @@
 			<nil key="sourceID"/>
 			<int key="maxID">20</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">MoneyTree</string>
+					<string key="superclassName">UIButton</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/MoneyTree.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">MoneyTreeView</string>
+					<string key="superclassName">UIView</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="moneyTree">MoneyTree</string>
+						<string key="popMessageBackgroundImageView">UIImageView</string>
+						<string key="popMessageBody">UIView</string>
+						<string key="popMessageLabel">UILabel</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="moneyTree">
+							<string key="name">moneyTree</string>
+							<string key="candidateClassName">MoneyTree</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="popMessageBackgroundImageView">
+							<string key="name">popMessageBackgroundImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="popMessageBody">
+							<string key="name">popMessageBody</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="popMessageLabel">
+							<string key="name">popMessageLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/MoneyTreeView.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
