--- a/Draw/ZhaJinHua/View/ZJHCardTypesView~ipad.xib
+++ b/Draw/ZhaJinHua/View/ZJHCardTypesView~ipad.xib
@@ -41,6 +41,7 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{430, 43}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSNextKeyView" ref="454431782"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -54,6 +55,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{10, 0}, {60, 43}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSNextKeyView" ref="745904652"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -68,11 +70,11 @@
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<int key="IBUITextAlignment">1</int>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="1056154830">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="140974685">
 							<int key="type">1</int>
 							<double key="pointSize">21</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="86273302">
+						<object class="NSFont" key="IBUIFont" id="689739982">
 							<string key="NSName">Helvetica</string>
 							<double key="NSSize">21</double>
 							<int key="NSfFlags">16</int>
@@ -84,6 +86,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{80, 0}, {60, 43}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSNextKeyView" ref="1038290246"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -98,8 +101,8 @@
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<int key="IBUITextAlignment">1</int>
-						<reference key="IBUIFontDescription" ref="1056154830"/>
-						<reference key="IBUIFont" ref="86273302"/>
+						<reference key="IBUIFontDescription" ref="140974685"/>
+						<reference key="IBUIFont" ref="689739982"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUILabel" id="904093530">
@@ -107,6 +110,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{150, 0}, {60, 43}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSNextKeyView" ref="704969061"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -118,8 +122,8 @@
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<int key="IBUITextAlignment">1</int>
-						<reference key="IBUIFontDescription" ref="1056154830"/>
-						<reference key="IBUIFont" ref="86273302"/>
+						<reference key="IBUIFontDescription" ref="140974685"/>
+						<reference key="IBUIFont" ref="689739982"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUILabel" id="625048453">
@@ -127,6 +131,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{220, 0}, {60, 43}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSNextKeyView" ref="427659028"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -138,8 +143,8 @@
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<int key="IBUITextAlignment">1</int>
-						<reference key="IBUIFontDescription" ref="1056154830"/>
-						<reference key="IBUIFont" ref="86273302"/>
+						<reference key="IBUIFontDescription" ref="140974685"/>
+						<reference key="IBUIFont" ref="689739982"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUILabel" id="605395088">
@@ -147,6 +152,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{290, 0}, {60, 43}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSNextKeyView" ref="323583222"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -158,8 +164,8 @@
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<int key="IBUITextAlignment">1</int>
-						<reference key="IBUIFontDescription" ref="1056154830"/>
-						<reference key="IBUIFont" ref="86273302"/>
+						<reference key="IBUIFontDescription" ref="140974685"/>
+						<reference key="IBUIFont" ref="689739982"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUILabel" id="630274278">
@@ -178,8 +184,8 @@
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<int key="IBUITextAlignment">1</int>
-						<reference key="IBUIFontDescription" ref="1056154830"/>
-						<reference key="IBUIFont" ref="86273302"/>
+						<reference key="IBUIFontDescription" ref="140974685"/>
+						<reference key="IBUIFont" ref="689739982"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUILabel" id="745904652">
@@ -187,6 +193,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{66, 0}, {20, 43}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSNextKeyView" ref="821259227"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -201,8 +208,8 @@
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<int key="IBUITextAlignment">1</int>
-						<reference key="IBUIFontDescription" ref="1056154830"/>
-						<reference key="IBUIFont" ref="86273302"/>
+						<reference key="IBUIFontDescription" ref="140974685"/>
+						<reference key="IBUIFont" ref="689739982"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUILabel" id="1038290246">
@@ -210,6 +217,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{136, 0}, {20, 43}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSNextKeyView" ref="904093530"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -221,8 +229,8 @@
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<int key="IBUITextAlignment">1</int>
-						<reference key="IBUIFontDescription" ref="1056154830"/>
-						<reference key="IBUIFont" ref="86273302"/>
+						<reference key="IBUIFontDescription" ref="140974685"/>
+						<reference key="IBUIFont" ref="689739982"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUILabel" id="704969061">
@@ -230,6 +238,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{206, 0}, {20, 43}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSNextKeyView" ref="625048453"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -241,8 +250,8 @@
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<int key="IBUITextAlignment">1</int>
-						<reference key="IBUIFontDescription" ref="1056154830"/>
-						<reference key="IBUIFont" ref="86273302"/>
+						<reference key="IBUIFontDescription" ref="140974685"/>
+						<reference key="IBUIFont" ref="689739982"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUILabel" id="427659028">
@@ -250,6 +259,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{276, 0}, {20, 43}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSNextKeyView" ref="605395088"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -261,8 +271,8 @@
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<int key="IBUITextAlignment">1</int>
-						<reference key="IBUIFontDescription" ref="1056154830"/>
-						<reference key="IBUIFont" ref="86273302"/>
+						<reference key="IBUIFontDescription" ref="140974685"/>
+						<reference key="IBUIFont" ref="689739982"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUILabel" id="323583222">
@@ -270,6 +280,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{346, 0}, {20, 43}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSNextKeyView" ref="630274278"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -281,13 +292,14 @@
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<int key="IBUITextAlignment">1</int>
-						<reference key="IBUIFontDescription" ref="1056154830"/>
-						<reference key="IBUIFont" ref="86273302"/>
+						<reference key="IBUIFontDescription" ref="140974685"/>
+						<reference key="IBUIFont" ref="689739982"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 				</array>
 				<string key="NSFrameSize">{430, 43}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSNextKeyView" ref="838142433"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MCAwAA</bytes>
