update get post list

--- a/Draw/BBS/Controller/BBSPostListController.xib
+++ b/Draw/BBS/Controller/BBSPostListController.xib
@@ -118,6 +118,7 @@
 						<reference key="NSNextKeyView" ref="733351719"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
+						<int key="IBUITag">100</int>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
@@ -141,7 +142,7 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
-						<string key="IBUINormalTitle">kNew</string>
+						<string key="IBUINormalTitle">kCP</string>
 						<reference key="IBUIHighlightedTitleColor" ref="861381307"/>
 						<reference key="IBUINormalTitleColor" ref="1067787232"/>
 						<reference key="IBUINormalTitleShadowColor" ref="590596335"/>
@@ -356,7 +357,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">18</int>
+			<int key="maxID">19</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
